FunctionRegistry and refactoring